--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flex_color_picker: ^3.7.0
   file_picker: ^10.0.0
   audio_waveforms: ^1.3.0
+  just_audio: ^0.9.46
 dev_dependencies:
   flutter_test:
     sdk: flutter
