--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   file_picker: ^10.0.0
   audio_waveforms: ^1.3.0
   just_audio: ^0.9.46
+  hive: ^4.0.0-dev.2
+  isar_flutter_libs: ^4.0.0-dev.13
+  path_provider: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
