--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   isar_flutter_libs: ^4.0.0-dev.13
   path_provider: ^2.1.0
   just_audio_background: ^0.0.1-beta.15
+  fluttertoast: ^8.2.12
 dev_dependencies:
   flutter_test:
     sdk: flutter
